--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -75,8 +75,13 @@ jobs:
         # --no-build-cache is required for codeql to analyze all modules
         # --no-daemon is required for codeql to observe the compilation
         # (see https://docs.github.com/en/code-security/codeql-cli/getting-started-with-the-codeql-cli/preparing-your-code-for-codeql-analysis#specifying-build-commands)
+        # collectReachabilityMetadata tasks are disabled because they often cause the build to fail
         run: >
           ./gradlew assemble -x javadoc
+          -x :smoke-tests-otel-starter:spring-boot-3:collectReachabilityMetadata
+          -x :smoke-tests-otel-starter:spring-boot-3.2:collectReachabilityMetadata
+          -x :smoke-tests-otel-starter:spring-boot-4:collectReachabilityMetadata
+          -x :smoke-tests-otel-starter:spring-boot-reactive-3:collectReachabilityMetadata
           --no-build-cache --no-daemon
 
       - name: Perform CodeQL analysis
