--- a/smoke-tests-otel-starter/spring-boot-3.2/src/main/resources/application.yaml
+++ b/smoke-tests-otel-starter/spring-boot-3.2/src/main/resources/application.yaml
@@ -40,8 +40,9 @@ otel:
 
   instrumentation/development:
     java:
+      common:
+        http:
+          client:
+            emit_experimental_telemetry: true
       runtime-telemetry:
         emit_experimental_telemetry: true
-      http:
-        client:
-          emit_experimental_telemetry: true
