--- a/docs/instrumentation-list.yaml
+++ b/docs/instrumentation-list.yaml
@@ -10510,6 +10510,12 @@ libraries:
           type: LONG
   quarkus:
   - name: quarkus-resteasy-reactive
+    display_name: Quarkus RESTEasy Reactive
+    description: |
+      This instrumentation enriches HTTP server spans with route information for Quarkus RESTEasy Reactive, it does not emit any telemetry on its own.
+    library_link: https://quarkus.io/guides/resteasy-reactive/
+    features:
+    - HTTP_ROUTE
     source_path: instrumentation/quarkus-resteasy-reactive
     scope:
       name: io.opentelemetry.quarkus-resteasy-reactive
@@ -10528,6 +10534,13 @@ libraries:
       - org.quartz-scheduler:quartz:2.0.0
   r2dbc:
   - name: r2dbc-1.0
+    display_name: R2DBC
+    description: |
+      This instrumentation enables database client spans and database client metrics for R2DBC (Reactive Relational Database Connectivity).
+    semantic_conventions:
+    - DATABASE_CLIENT_SPANS
+    - DATABASE_CLIENT_METRICS
+    library_link: https://r2dbc.io/
     source_path: instrumentation/r2dbc-1.0
     scope:
       name: io.opentelemetry.r2dbc-1.0
@@ -10536,6 +10549,87 @@ libraries:
       - io.r2dbc:r2dbc-spi:[1.0.0.RELEASE,)
       library:
       - io.r2dbc:r2dbc-spi:1.0.0.RELEASE
+    configurations:
+    - name: otel.instrumentation.r2dbc.statement-sanitizer.enabled
+      description: |
+        Enables statement sanitization for database queries. Takes precedence over otel.instrumentation.common.db-statement-sanitizer.enabled.
+      type: boolean
+      default: true
+    - name: otel.instrumentation.common.db-statement-sanitizer.enabled
+      description: Enables statement sanitization for database queries.
+      type: boolean
+      default: true
+    - name: otel.instrumentation.r2dbc.experimental.sqlcommenter.enabled
+      description: |
+        Enables augmenting queries with a comment containing the tracing information. See [sqlcommenter](https://google.github.io/sqlcommenter/) for more info. WARNING: augmenting queries with tracing context will make query texts unique, which may have adverse impact on database performance.
+      type: boolean
+      default: false
+    - name: otel.instrumentation.common.peer-service-mapping
+      description: Used to specify a mapping from host names or IP addresses to peer
+        services.
+      type: map
+      default: ''
+    telemetry:
+    - when: default
+      spans:
+      - span_kind: CLIENT
+        attributes:
+        - name: db.connection_string
+          type: STRING
+        - name: db.name
+          type: STRING
+        - name: db.operation
+          type: STRING
+        - name: db.sql.table
+          type: STRING
+        - name: db.statement
+          type: STRING
+        - name: db.system
+          type: STRING
+        - name: db.user
+          type: STRING
+        - name: peer.service
+          type: STRING
+        - name: server.address
+          type: STRING
+        - name: server.port
+          type: LONG
+    - when: otel.semconv-stability.opt-in=database
+      metrics:
+      - name: db.client.operation.duration
+        description: Duration of database client operations.
+        type: HISTOGRAM
+        unit: s
+        attributes:
+        - name: db.namespace
+          type: STRING
+        - name: db.operation.name
+          type: STRING
+        - name: db.system.name
+          type: STRING
+        - name: server.address
+          type: STRING
+        - name: server.port
+          type: LONG
+      spans:
+      - span_kind: CLIENT
+        attributes:
+        - name: db.collection.name
+          type: STRING
+        - name: db.namespace
+          type: STRING
+        - name: db.operation.name
+          type: STRING
+        - name: db.query.text
+          type: STRING
+        - name: db.system.name
+          type: STRING
+        - name: peer.service
+          type: STRING
+        - name: server.address
+          type: STRING
+        - name: server.port
+          type: LONG
   rabbitmq:
   - name: rabbitmq-2.7
     display_name: RabbitMQ
@@ -10781,6 +10875,13 @@ libraries:
           type: STRING
   rediscala:
   - name: rediscala-1.8
+    display_name: Rediscala
+    description: |
+      This instrumentation enables database client spans and database client metrics for Rediscala.
+    semantic_conventions:
+    - DATABASE_CLIENT_SPANS
+    - DATABASE_CLIENT_METRICS
+    library_link: https://github.com/rediscala/rediscala
     source_path: instrumentation/rediscala-1.8
     scope:
       name: io.opentelemetry.rediscala-1.8
@@ -10793,6 +10894,33 @@ libraries:
       - io.github.rediscala:rediscala_2.13:[1.10.0,)
       - com.github.etaty:rediscala_2.13:[1.9.0,)
       - com.github.Ma27:rediscala_2.12:[1.8.1,)
+    telemetry:
+    - when: default
+      spans:
+      - span_kind: CLIENT
+        attributes:
+        - name: db.operation
+          type: STRING
+        - name: db.system
+          type: STRING
+    - when: otel.semconv-stability.opt-in=database
+      metrics:
+      - name: db.client.operation.duration
+        description: Duration of database client operations.
+        type: HISTOGRAM
+        unit: s
+        attributes:
+        - name: db.operation.name
+          type: STRING
+        - name: db.system.name
+          type: STRING
+      spans:
+      - span_kind: CLIENT
+        attributes:
+        - name: db.operation.name
+          type: STRING
+        - name: db.system.name
+          type: STRING
   redisson:
   - name: redisson-3.0
     source_path: instrumentation/redisson/redisson-3.0
