Rocketmq metadata and test refactor (#15834)

--- a/.fossa.yml
+++ b/.fossa.yml
@@ -894,6 +894,15 @@ targets:
       target: ':instrumentation:restlet:restlet-2.0:library'
     - type: gradle
       path: ./
+      target: ':instrumentation:rocketmq:rocketmq-client-4.8:javaagent'
+    - type: gradle
+      path: ./
+      target: ':instrumentation:rocketmq:rocketmq-client-4.8:library'
+    - type: gradle
+      path: ./
+      target: ':instrumentation:rocketmq:rocketmq-client-5.0:javaagent'
+    - type: gradle
+      path: ./
       target: ':instrumentation:runtime-telemetry:runtime-telemetry-java17:javaagent'
     - type: gradle
       path: ./
@@ -1132,15 +1141,6 @@ targets:
     - type: gradle
       path: ./
       target: ':instrumentation:reactor:reactor-netty:reactor-netty-1.0:javaagent'
-    - type: gradle
-      path: ./
-      target: ':instrumentation:rocketmq:rocketmq-client:rocketmq-client-4.8:javaagent'
-    - type: gradle
-      path: ./
-      target: ':instrumentation:rocketmq:rocketmq-client:rocketmq-client-4.8:library'
-    - type: gradle
-      path: ./
-      target: ':instrumentation:rocketmq:rocketmq-client:rocketmq-client-5.0:javaagent'
     - type: gradle
       path: ./
       target: ':instrumentation:spring:spring-cloud-gateway:spring-cloud-gateway-2.0:javaagent'
