--- a/.github/workflows/auto-license-report.yml
+++ b/.github/workflows/auto-license-report.yml
@@ -37,6 +37,7 @@ jobs:
       - id: create-patch
         name: Create patch file
         run: |
+          git add -N --ignore-removal licenses
           git diff > patch
           if [ -s patch ]; then
             echo "exists=true" >> "$GITHUB_OUTPUT"
